fix: hotfix member advanced search